Revert "Merge https://github.com/lsiepel/openhab-addons into multi-request_timout"
This reverts commit f07c039c5d7256ca980fbbf0678b46b078bdbffe.