@@ -15,6 +15,7 @@ package org.openhab.binding.airquality.internal.discovery;
 import static org.openhab.binding.airquality.internal.AirQualityBindingConstants.*;
 import static org.openhab.binding.airquality.internal.config.AirQualityConfiguration.LOCATION;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -42,7 +43,7 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class AirQualityDiscoveryService extends AbstractDiscoveryService implements ThingHandlerService {
     private static final int DISCOVER_TIMEOUT_SECONDS = 2;
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_STATION);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_STATION);
 
     private final Logger logger = LoggerFactory.getLogger(AirQualityDiscoveryService.class);
 
@@ -58,8 +59,9 @@ public class AirQualityDiscoveryService extends AbstractDiscoveryService impleme
 
     @Override
     public void setThingHandler(@Nullable ThingHandler handler) {
-        if (handler instanceof AirQualityBridgeHandler bridgeHandlerInstance) {
-            this.bridgeHandler = bridgeHandlerInstance;
+        if (handler instanceof AirQualityBridgeHandler) {
+            final AirQualityBridgeHandler bridgeHandler = (AirQualityBridgeHandler) handler;
+            this.bridgeHandler = bridgeHandler;
             this.locationProvider = bridgeHandler.getLocationProvider();
         }
     }
