@@ -12,6 +12,7 @@
  */
 package org.openhab.binding.bluetooth.roaming.internal;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -31,7 +32,7 @@ public class RoamingBindingConstants {
     public static final ThingTypeUID THING_TYPE_ROAMING = new ThingTypeUID(BluetoothBindingConstants.BINDING_ID,
             "roaming");
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_ROAMING);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_ROAMING);
 
     public static final String CONFIGURATION_GROUP_ADAPTER_UIDS = "groupUIDs";
 }
