@@ -14,6 +14,7 @@ package org.openhab.binding.bticinosmarther.internal.discovery;
 
 import static org.openhab.binding.bticinosmarther.internal.SmartherBindingConstants.*;
 
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
@@ -46,7 +47,7 @@ public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
         implements DiscoveryService, ThingHandlerService {
 
     // Only modules can be discovered. A bridge must be manually added.
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_MODULE);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_MODULE);
 
     private static final int DISCOVERY_TIME_SECONDS = 30;
 
@@ -85,7 +86,8 @@ public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
 
     @Override
     public void setThingHandler(@Nullable ThingHandler handler) {
-        if (handler instanceof SmartherAccountHandler localBridgeHandler) {
+        if (handler instanceof SmartherAccountHandler) {
+            final SmartherAccountHandler localBridgeHandler = (SmartherAccountHandler) handler;
             this.bridgeHandler = localBridgeHandler;
             this.bridgeUID = localBridgeHandler.getUID();
         }
