@@ -14,6 +14,7 @@ package org.openhab.binding.danfossairunit.internal;
 
 import static org.openhab.binding.danfossairunit.internal.DanfossAirUnitBindingConstants.THING_TYPE_AIRUNIT;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -37,7 +38,7 @@ import org.osgi.service.component.annotations.Component;
 @Component(configurationPid = "binding.danfossairunit", service = ThingHandlerFactory.class)
 public class DanfossAirUnitHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_AIRUNIT);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_AIRUNIT);
 
     @Override
     public boolean supportsThingType(ThingTypeUID thingTypeUID) {
