@@ -16,6 +16,7 @@ import static org.openhab.binding.ecobee.internal.EcobeeBindingConstants.CONFIG_
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -136,7 +137,7 @@ public class EcobeeAccountBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Set.of(EcobeeDiscoveryService.class);
+        return Collections.singleton(EcobeeDiscoveryService.class);
     }
 
     @Override
