@@ -16,9 +16,9 @@ import static org.openhab.binding.freebox.internal.FreeboxBindingConstants.*;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -92,7 +92,7 @@ public class FreeboxHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Set.of(FreeboxDiscoveryService.class);
+        return Collections.singleton(FreeboxDiscoveryService.class);
     }
 
     @Override
@@ -494,8 +494,8 @@ public class FreeboxHandler extends BaseBridgeHandler {
                     continue;
                 }
                 ThingHandler handler = thing.getHandler();
-                if (handler instanceof FreeboxThingHandler thingHandler) {
-                    thingHandler.updateNetInfo(hosts);
+                if (handler instanceof FreeboxThingHandler) {
+                    ((FreeboxThingHandler) handler).updateNetInfo(hosts);
                 }
             }
 
@@ -519,8 +519,8 @@ public class FreeboxHandler extends BaseBridgeHandler {
                     continue;
                 }
                 ThingHandler handler = thing.getHandler();
-                if (handler instanceof FreeboxThingHandler thingHandler) {
-                    thingHandler.updateAirPlayDevice(devices);
+                if (handler instanceof FreeboxThingHandler) {
+                    ((FreeboxThingHandler) handler).updateAirPlayDevice(devices);
                 }
             }
 
@@ -542,10 +542,12 @@ public class FreeboxHandler extends BaseBridgeHandler {
             } else if (command instanceof OnOffType) {
                 updateChannelDecimalState(LCDBRIGHTNESS,
                         apiManager.setLcdBrightness((command == OnOffType.ON) ? 100 : 0));
-            } else if (command instanceof DecimalType decimalCommand) {
-                updateChannelDecimalState(LCDBRIGHTNESS, apiManager.setLcdBrightness(decimalCommand.intValue()));
-            } else if (command instanceof PercentType percentCommand) {
-                updateChannelDecimalState(LCDBRIGHTNESS, apiManager.setLcdBrightness(percentCommand.intValue()));
+            } else if (command instanceof DecimalType) {
+                updateChannelDecimalState(LCDBRIGHTNESS,
+                        apiManager.setLcdBrightness(((DecimalType) command).intValue()));
+            } else if (command instanceof PercentType) {
+                updateChannelDecimalState(LCDBRIGHTNESS,
+                        apiManager.setLcdBrightness(((PercentType) command).intValue()));
             } else {
                 logger.debug("Thing {}: invalid command {} from channel {}", getThing().getUID(), command,
                         channelUID.getId());
@@ -557,9 +559,9 @@ public class FreeboxHandler extends BaseBridgeHandler {
     }
 
     private void setOrientation(ChannelUID channelUID, Command command) {
-        if (command instanceof DecimalType orientation) {
+        if (command instanceof DecimalType) {
             try {
-                FreeboxLcdConfig config = apiManager.setLcdOrientation(orientation.intValue());
+                FreeboxLcdConfig config = apiManager.setLcdOrientation(((DecimalType) command).intValue());
                 updateChannelDecimalState(LCDORIENTATION, config.getOrientation());
                 updateChannelSwitchState(LCDFORCED, config.isOrientationForced());
             } catch (FreeboxException e) {
