@@ -14,6 +14,7 @@ package org.openhab.binding.fsinternetradio.internal;
 
 import static org.openhab.binding.fsinternetradio.internal.FSInternetRadioBindingConstants.*;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -140,7 +141,7 @@ public class FSInternetRadioDiscoveryParticipant implements UpnpDiscoveryPartici
 
     @Override
     public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Set.of(THING_TYPE_RADIO);
+        return Collections.singleton(THING_TYPE_RADIO);
     }
 
     @Override
