@@ -21,6 +21,7 @@ import java.net.InetAddress;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -369,7 +370,8 @@ public class GreeAirDevice {
             int valueArrayposition = colList.indexOf(valueName);
             if (valueArrayposition != -1) {
                 // get the Corresponding value
-                return valList.get(valueArrayposition);
+                Integer value = valList.get(valueArrayposition);
+                return value;
             }
         }
 
@@ -382,7 +384,7 @@ public class GreeAirDevice {
     }
 
     public boolean hasStatusValChanged(String valueName) throws GreeException {
-        if (prevStatusResponsePackGson.isEmpty()) {
+        if (!prevStatusResponsePackGson.isPresent()) {
             return true; // update value if there is no previous one
         }
         // Find the valueName in the Current Status object
@@ -440,7 +442,7 @@ public class GreeAirDevice {
     }
 
     private void setCommandValue(DatagramSocket clientSocket, String command, int value) throws GreeException {
-        executeCommand(clientSocket, Map.of(command, value));
+        executeCommand(clientSocket, Collections.singletonMap(command, value));
     }
 
     private void setCommandValue(DatagramSocket clientSocket, String command, int value, int min, int max)
@@ -448,7 +450,7 @@ public class GreeAirDevice {
         if ((value < min) || (value > max)) {
             throw new GreeException("Command value out of range!");
         }
-        executeCommand(clientSocket, Map.of(command, value));
+        executeCommand(clientSocket, Collections.singletonMap(command, value));
     }
 
     private DatagramPacket createPackRequest(int i, String pack) {
@@ -460,7 +462,8 @@ public class GreeAirDevice {
         request.tcid = getId();
         request.pack = pack;
         byte[] sendData = GSON.toJson(request).getBytes(StandardCharsets.UTF_8);
-        return new DatagramPacket(sendData, sendData.length, ipAddress, port);
+        DatagramPacket sendPacket = new DatagramPacket(sendData, sendData.length, ipAddress, port);
+        return sendPacket;
     }
 
     private <T> T receiveResponse(DatagramSocket clientSocket, Class<T> classOfT)
